--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="about-sky"></div>
   
             <!-- sum image -->
-            <div > <img crossorigin="anonymous" class="sum-img" alt=""></div>
+             <img crossorigin="anonymous" class="sum-img" alt="">
   
             <!-- temperature -->
             <div class="temp"></div>
